# tool_call_experiment

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_critical_fixes.py
results/: evaluation_results.json  evaluation_results_partial.json  summary_report.md  token_usage.csv  token_usage.json
src/: __init__.py
src/evaluation/: __init__.py  metrics.py  parser.py  runner.py
src/formats/: __init__.py  base.py  function_sig.py  json_format.py  mcp_format.py  unstructured.py  xml_format.py
src/models/: __init__.py  config.py
src/prompts/: __init__.py  ambiguous.py  base.py  complex.py  multi_tool.py  simple.py
src/tokens/: __init__.py  cost.py  counter.py  overhead.py  tracker.py
src/tools/: __init__.py  base.py  complex.py  edge_cases.py  medium.py  simple.py
tests/: __init__.py  test_evaluation.py  test_formats.py  test_new_metrics.py  test_tools.py
